# src/Controller/Person/PersonRelationsController.php
@@ -48,7 +48,14 @@ final class PersonRelationsController extends ElementRelationsBaseController
      */
     public function getEntities(Request $request, Response $response, array $args): Response
     {
-        // @TODO
+        /** @var Person|null $person */
+        $person = $this->entityManager
+            ->getRepository(PersonQueryController::getEntityClassName())
+            ->find($args[PersonQueryController::getEntityIdName()]);
+        $entities = $person?->getEntities() ?? [];
+
+        return $this->getElements($response, $person, EntityQueryController::getEntitiesTag(), $entities);
+
     }
 
     /**
@@ -64,7 +71,13 @@ final class PersonRelationsController extends ElementRelationsBaseController
      */
     public function operationEntity(Request $request, Response $response, array $args): Response
     {
-        // @TODO
+        return $this->operationRelatedElements(
+            $request,
+            $response,
+            $args,
+            EntityQueryController::getEntityClassName()
+        );
+
     }
 
     /**
